fixed z-index on first-line headers throughout site

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -134,6 +134,8 @@ a.item {
   color: #FFF !important;
   font-size: 4em;
   font-weight: 500 !important;
+  position: relative;
+  z-index: 25;
 }
 
 .first-line p{
